--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Petition website for Mandela House justice",
   "type": "module",
   "scripts": {
-    "dev": "vercel dev",
-    "build": "echo 'No build step required'"
+    "dev": "vercel dev"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.10.0"
