--- a/package.json
+++ b/package.json
@@ -4,10 +4,15 @@
   "description": "Petition website for Mandela House justice",
   "type": "module",
   "scripts": {
-    "dev": "vercel dev"
+    "dev": "vercel dev",
+    "start": "node server.js",
+    "backup": "bash scripts/backup-database.sh",
+    "verify": "bash scripts/verify-migration.sh"
   },
   "dependencies": {
-    "@neondatabase/serverless": "^0.10.0"
+    "@neondatabase/serverless": "^0.10.0",
+    "express": "^4.18.2",
+    "dotenv": "^16.3.1"
   },
   "engines": {
     "node": ">=18"
